fix: full view container is visible
Took 6 minutes

--- a/src/views/ListView.module.scss
+++ b/src/views/ListView.module.scss
@@ -4,5 +4,6 @@
   background: $white;
   border-radius: 48px;
   padding: 24px 0 48px;
+  margin-bottom: 72px;
   min-height: calc(100vh - 144px);
 }
